--- a/src/hardware/verilator/Makefile.in
+++ b/src/hardware/verilator/Makefile.in
@@ -47,12 +47,12 @@ ${REPO_HOME}/build/xalu_emulator64 : $(rtl64_src)
 #--------------------------------------------------------------------
 # Build software
 #--------------------------------------------------------------------
-#DEF_CONF  = -DSPARKLE_RV32_TYPE1 
-#DEF_CONF += -DDRIVER_TRIALS_WARM=1 -DDRIVER_TRIALS_REAL=2 -DDRIVER_MEASURE=1 
-#DEF_CONF += -DCRAXS10_ENC_EXTERN -DTRAXL17_ENC_EXTERN -DSPARKLE_FWD_EXTERN 
-#DEF_CONF += -DCRAXS10_DEC_EXTERN -DTRAXL17_DEC_EXTERN -DSPARKLE_REV_EXTERN
+EMU_DEF_CONF  = -DSPARKLE_RV32_TYPE1 
+EMU_DEF_CONF += -DDRIVER_TRIALS_WARM=1 -DDRIVER_TRIALS_REAL=2 -DDRIVER_MEASURE=1 
+EMU_DEF_CONF += -DCRAXS10_ENC_EXTERN -DTRAXL17_ENC_EXTERN -DSPARKLE_FWD_EXTERN 
+EMU_DEF_CONF += -DCRAXS10_DEC_EXTERN -DTRAXL17_DEC_EXTERN -DSPARKLE_REV_EXTERN
 
-#export CONF ?= ${DEF_CONF}
+export EMU_SWCONF ?= ${EMU_DEF_CONF}
 
 export EMU_HAL  = ${REPO_HOME}/src/hardware/verilator/hal
 export SOFTWARE = ${REPO_HOME}/src/software
@@ -71,7 +71,7 @@ export TARGET   = ${REPO_HOME}/build/driver_emu
 # -----------------------------------------------------------------------------
 
 ${TARGET}.elf : ${SOURCES} ${HEADERS}
-	${GCC_PREFIX}-gcc ${CONF} ${GCC_FLAGS} ${GCC_PATHS} $(addprefix -I ,${INCLUDES}) -std='gnu99' -O2 -o ${@} $(filter %.c, ${^}) $(filter %.S, ${^}) ${GCC_LIBS}
+	${GCC_PREFIX}-gcc ${EMU_SWCONF} ${GCC_FLAGS} ${GCC_PATHS} $(addprefix -I ,${INCLUDES}) -std='gnu99' -O2 -o ${@} $(filter %.c, ${^}) $(filter %.S, ${^}) ${GCC_LIBS}
 
 ${TARGET}.asm : ${TARGET}.elf
 	${GCC_PREFIX}-objdump --disassemble-all ${<} > ${@}
@@ -81,9 +81,7 @@ emulate: ${EMULATOR} ${TARGET}.elf
 emulate-debug : ${EMULATOR} ${TARGET}.elf
 	${EMULATOR} -c -x 700000 -v ${REPO_HOME}/build/emu32_eval.vcd -m 2100000 ${<}
 
-all   : ${TARGET}.elf ${TARGET}.asm
-
-clean : 
+emu-clean : 
 	@rm --force ${TARGET}.elf
 	@rm --force ${TARGET}.asm
 
