--- a/src/hardware/fpga/soc/rv64-rocket/bootrom/Makefile
+++ b/src/hardware/fpga/soc/rv64-rocket/bootrom/Makefile
@@ -1,22 +1,19 @@
 bootrom_img = bootrom.img
-bootrom_hex = bootrom.hex
 bootrom_dum = bootrom.dum
 
 GCC=$(RISCV)/bin/riscv64-unknown-elf-gcc
 OBJCOPY=$(RISCV)/bin/riscv64-unknown-elf-objcopy
 OBJDUMP=$(RISCV)/bin/riscv64-unknown-elf-objdump
 
-all: $(bootrom_img) $(bootrom_hex) $(bootrom_dum) 
+all: $(bootrom_img) $(bootrom_dum) 
 
-%.hex: %.bin
-	od -t x4 -An -w4 -v $< > $@	
 %.dum: %.elf
 	$(OBJDUMP) -Dt $< > $@
 %.img: %.bin
-	dd if=$< of=$@ bs=128 count=1
+	dd if=$< of=$@ bs=2048 count=1
 
 %.bin: %.elf
 	$(OBJCOPY) -O binary $< $@
 
-%.elf: %.S linker.ld
-	$(GCC) -Tlinker.ld $< -nostdlib -static -Wl,--no-gc-sections -o $@
+%.elf : %.S bootloader.c linker.ld
+	$(GCC) -march=rv64imc -mabi=lp64 -Tlinker.ld $< bootloader.c -nostdlib -static -Wl,--no-gc-sections -o $@
