--- a/src/hardware/rtl/ascon/rv64/Makefile.in
+++ b/src/hardware/rtl/ascon/rv64/Makefile.in
@@ -7,22 +7,16 @@
 #--------------------------------------------------------------------
 # Sources
 #--------------------------------------------------------------------
-RTL32 =$(REPO_HOME)/src/hardware/rtl/rv32
+RTL64 = $(REPO_HOME)/src/hardware/rtl/$(ALG)/rv64
+rtl64_ise_src= \
+        $(RTL64)/rv64b_ise.v \
+        $(RTL64)/ascon_ise.v 
 
-rtl32_ise_src= \
-        $(RTL32)/rv32b_ise.v \
-        $(RTL32)/rv32ell_ise.v \
-        $(RTL32)/alzette_ise_v2.v \
-        $(RTL32)/alzette_ise_v3.v \
-        $(RTL32)/alzette_ise_v4.v 
+rtl64_cop_src = $(RTL64)/cop_ise.v 
+rtl64_xalu_src= $(RTL64)/xalu_ise.v 
 
-rtl32_cop_src = $(RTL32)/cop_ise.v 
-rtl32_xalu_src= $(RTL32)/xalu_ise.v 
-
-rtl32_src= \
-        $(rtl32_ise_src) \
-        $(rtl32_cop_src) \
-        $(rtl32_xalu_src) 
-         
-
+rtl64_src= \
+        $(rtl64_ise_src) \
+        $(rtl64_cop_src) \
+        $(rtl64_xalu_src) 
 
