--- a/src/hardware/verilator/Makefile.in
+++ b/src/hardware/verilator/Makefile.in
@@ -7,7 +7,7 @@
 #--------------------------------------------------------------------
 # Sources
 #--------------------------------------------------------------------
-include ${REPO_HOME}/src/hardware/rtl/$(ARCH)/Makefile.in
+include ${REPO_HOME}/src/hardware/rtl/$(ALG)/$(ARCH)/Makefile.in
 
 #--------------------------------------------------------------------
 # Build emulator
@@ -20,26 +20,30 @@ COP_CONF32 = SCARVRocketCoPConf32
 XALU_CONF32 = SCARVRocketXALUConf32
 XALU_CONF64 = SCARVRocketXALUConf64
 
-export EMULATOR = ${REPO_HOME}/build/$(ISE)_emulator$(subst rv,,$(ARCH))
+export EMULATOR = ${REPO_HOME}/build/$(ALG)_$(ISE)_emulator$(subst rv,,$(ARCH))
 
 # Notes: building emulator requires RISCV tool supporting the fesvr package
 #        building RISCV gnu-gcc toolchain for 64 bit rocketchip requires option: --with-cmodel=medany
 
 emulator : $(EMULATOR)
 
-${REPO_HOME}/build/cop_emulator64 : $(rtl64_src)
+${REPO_HOME}/build/$(ALG)_cop_emulator64 : $(rtl64_src) $(ROCKETCHIP_REPO)/bootrom/bootrom.img
+	cp -f ${REPO_HOME}/src/hardware/verilator/bootrom/bootrom.img          $(ROCKETCHIP_REPO)/bootrom/bootrom.img
 	$(MAKE) -C $(ROCKETCHIP_REPO)/emulator CONFIG=$(COP_CONF64) MODEL=$(EMULATORMODEL) ISE_RTL=$(RTL64) debug
 	cp $(ROCKETCHIP_REPO)/emulator/emulator-$(ROCKET)-$(COP_CONF64)-debug  $@
 
-${REPO_HOME}/build/cop_emulator32 : $(rtl32_src)
+${REPO_HOME}/build/$(ALG)_cop_emulator32 : $(rtl32_src) $(ROCKETCHIP_REPO)/bootrom/bootrom.img
+	cp -f ${REPO_HOME}/src/hardware/verilator/bootrom/bootrom.img          $(ROCKETCHIP_REPO)/bootrom/bootrom.img
 	$(MAKE) -C $(ROCKETCHIP_REPO)/emulator CONFIG=$(COP_CONF32) MODEL=$(EMULATORMODEL) ISE_RTL=$(RTL32) debug
 	cp $(ROCKETCHIP_REPO)/emulator/emulator-$(ROCKET)-$(COP_CONF32)-debug  $@
 
-${REPO_HOME}/build/xalu_emulator32 : $(rtl32_src)
+${REPO_HOME}/build/$(ALG)_xalu_emulator32 : $(rtl32_src) $(ROCKETCHIP_REPO)/bootrom/bootrom.img
+	cp -f ${REPO_HOME}/src/hardware/verilator/bootrom/bootrom.img          $(ROCKETCHIP_REPO)/bootrom/bootrom.img
 	$(MAKE) -C $(ROCKETCHIP_REPO)/emulator CONFIG=$(XALU_CONF32) MODEL=$(EMULATORMODEL) ISE_RTL=$(RTL32) debug
 	cp $(ROCKETCHIP_REPO)/emulator/emulator-$(ROCKET)-$(XALU_CONF32)-debug  $@
 
-${REPO_HOME}/build/xalu_emulator64 : $(rtl64_src)
+${REPO_HOME}/build/$(ALG)_xalu_emulator64 : $(rtl64_src) $(ROCKETCHIP_REPO)/bootrom/bootrom.img
+	cp -f ${REPO_HOME}/src/hardware/verilator/bootrom/bootrom.img          $(ROCKETCHIP_REPO)/bootrom/bootrom.img
 	$(MAKE) -C $(ROCKETCHIP_REPO)/emulator CONFIG=$(XALU_CONF64) MODEL=$(EMULATORMODEL) ISE_RTL=$(RTL64) debug
 	cp $(ROCKETCHIP_REPO)/emulator/emulator-$(ROCKET)-$(XALU_CONF64)-debug  $@
 
@@ -47,7 +51,7 @@ ${REPO_HOME}/build/xalu_emulator64 : $(rtl64_src)
 #--------------------------------------------------------------------
 # Build software
 #--------------------------------------------------------------------
-EMU_DEF_CONF  = -DSPARKLE_RV32_TYPE1 
+EMU_DEF_CONF  = -DSPARKLE_RV64_TYPE1 
 EMU_DEF_CONF += -DDRIVER_TRIALS_WARM=1 -DDRIVER_TRIALS_REAL=2 -DDRIVER_MEASURE=1 
 EMU_DEF_CONF += -DCRAXS10_ENC_EXTERN -DTRAXL17_ENC_EXTERN -DSPARKLE_FWD_EXTERN 
 EMU_DEF_CONF += -DCRAXS10_DEC_EXTERN -DTRAXL17_DEC_EXTERN -DSPARKLE_REV_EXTERN
