--- a/src/hardware/yosys_synth/Makefile.in
+++ b/src/hardware/yosys_synth/Makefile.in
@@ -35,13 +35,13 @@ sys_vsrc = plusarg_reader.v AsyncResetReg.v EICG_wrapper.v
 export rtl_src  = $(addprefix $(ROCKETCHIP_REPO)/src/main/resources/vsrc/, $(sys_vsrc))
 export rtl_src += $(rocket_gen)
 export rtl_src += $(srams_gen) 
-export rtl_src += $(REPO_HOME)/src/hardware/rtl/$(ARCH)/*.v
+export rtl_src += $(REPO_HOME)/src/hardware/rtl/$(ALG)/$(ARCH)/*.v
 
 #--------------------------------------------------------------------
 # Targets
 #--------------------------------------------------------------------
 export SYNTH      = ${REPO_HOME}/build/yosys_synth
-export RV_ARCH    = $(ISE)_$(ARCH)
+export RV_ARCH    = $(ALG)_$(ISE)_$(ARCH)
 export SYN_MODULE = $(MODULE)
 
 SYNTH_SCRIPT      = $(REPO_HOME)/src/hardware/yosys_synth/yosys_synth.tcl
@@ -75,8 +75,8 @@ $(SYNTH)/rocket_cop_rv64.v :  $(GENERATED)/$(ROCKET).$(COP_CONF64).v
 synth_verilog   = $(SYNTH)/synth-$(RV_ARCH)-$(SYN_MODULE).v
 $(synth_verilog): $(SYNTH_SCRIPT) $(rtl_src) 
 	@mkdir -p         $(SYNTH)
-	@mkdir -p         $(SYNTH)/$(ISE)_$(ARCH)_rtl_sources
-	cp -f $(rtl_src)  $(SYNTH)/$(ISE)_$(ARCH)_rtl_sources/
+	@mkdir -p         $(SYNTH)/$(ALG)_$(ISE)_$(ARCH)_rtl_sources
+	cp -f $(rtl_src)  $(SYNTH)/$(ALG)_$(ISE)_$(ARCH)_rtl_sources/
 	yosys -QT -l $(SYNTH_LOG_OUT) $(SYNTH_SCRIPT)
 
 synthesise: $(synth_verilog)
