--- a/src/software-toolchain/Makefile
+++ b/src/software-toolchain/Makefile
@@ -13,27 +13,31 @@ endif
 
 # =============================================================================
 
-COMPONENTS = riscv-gnu riscv-fesvr
+COMPONENTS = pk spike
 
 define rule_clone
 $(strip ${1})-clone  :
-	@$${REPO_HOME}/src/toolchain-rocket/$(strip ${1})-clone.sh
+	@$${REPO_HOME}/src/software-toolchain/$(strip ${1})-clone.sh
 endef
 define rule_apply
 $(strip ${1})-apply  :
-	@$${REPO_HOME}/src/toolchain-rocket/$(strip ${1})-apply.sh
+	@$${REPO_HOME}/src/software-toolchain/$(strip ${1})-apply.sh
 endef
 define rule_build
 $(strip ${1})-build  :
-	@$${REPO_HOME}/src/toolchain-rocket/$(strip ${1})-build.sh
+	@$${REPO_HOME}/src/software-toolchain/$(strip ${1})-build.sh
 endef
 define rule_update
 $(strip ${1})-update :
-	@$${REPO_HOME}/src/toolchain-rocket/$(strip ${1})-update.sh
+	@$${REPO_HOME}/src/software-toolchain/$(strip ${1})-update.sh
 endef
 define rule_revert
 $(strip ${1})-revert :
-	@$${REPO_HOME}/src/toolchain-rocket/$(strip ${1})-revert.sh
+	@$${REPO_HOME}/src/software-toolchain/$(strip ${1})-revert.sh
+endef
+define rule_clean
+$(strip ${1})-revert :
+	@$${REPO_HOME}/src/software-toolchain/$(strip ${1})-clean.sh
 endef
 
 $(foreach COMPONENT,${COMPONENTS},$(eval $(call rule_clone, ${COMPONENT})))
@@ -52,7 +56,6 @@ update : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-update)
 
 revert : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-revert)
 
-clean  :
-	@rm --force --recursive ${REPO_HOME}/build/toolchain-rocket
+clean  : $(foreach COMPONENT, ${COMPONENTS}, ${COMPONENT}-clean)
 
 # =============================================================================
