--- a/src/sw/share/arch/rv32/Makefile.in
+++ b/src/sw/share/arch/rv32/Makefile.in
@@ -19,7 +19,7 @@ endif
 
 export GCC_PREFIX = ${RISCV}/bin/riscv64-unknown-elf
 
-export GCC_FLAGS  = -march='rv32gc_zbb' -mabi='ilp32'
+export GCC_FLAGS  = -march='rv32gc' -mabi='ilp32'
 export GCC_PATHS  = 
 export GCC_LIBS   = 
 
