--- a/src/sw/share/arch/rv64/Makefile.in
+++ b/src/sw/share/arch/rv64/Makefile.in
@@ -19,7 +19,7 @@ endif
 
 export GCC_PREFIX = ${RISCV}/bin/riscv64-unknown-elf
 
-export GCC_FLAGS  = -march='rv64gc_zbb' -mabi='lp64'
+export GCC_FLAGS  = -march='rv64gc' -mabi='lp64'
 export GCC_PATHS  = 
 export GCC_LIBS   = 
 
