add Zbkx to baseline: this seems to make sense given various candidates involve, e.g., 4- or 8-bit S-boxes

--- a/src/sw/share/arch/rv64/Makefile.in
+++ b/src/sw/share/arch/rv64/Makefile.in
@@ -28,6 +28,6 @@ export GCC_LIBS   =
 FORCE :
 
 ${TARGET}.run : ${TARGET}.elf FORCE
-	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike --isa='rv64gc_zbb_zbkb' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv64-unknown-elf/bin/pk ${<} | tee ${@}
+	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike --isa='rv64gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv64-unknown-elf/bin/pk ${<} | tee ${@}
 
 # =============================================================================
