--- a/src/sw/share/arch/rv32/Makefile.in
+++ b/src/sw/share/arch/rv32/Makefile.in
@@ -28,6 +28,6 @@ export GCC_LIBS   =
 FORCE :
 
 ${TARGET}.run : ${TARGET}.elf FORCE
-	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike --isa='rv32gc_zbb_zbkb' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv32-unknown-elf/bin/pk ${<} | tee ${@}
+	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike --isa='rv32gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv32-unknown-elf/bin/pk ${<} | tee ${@}
 
 # =============================================================================
