--- a/src/hw/yosys_synth/Makefile.in
+++ b/src/hw/yosys_synth/Makefile.in
@@ -5,7 +5,7 @@
 # can be found at https://opensource.org/licenses/MIT (or should be included 
 # as LICENSE.txt within the associated archive or repository).
 
-ROCKETCHIP_REPO = ${REPO_HOME}/build/rocketchip
+ROCKETCHIP_REPO ?= ${REPO_HOME}/build/rocketchip
 GENERATED       = $(ROCKETCHIP_REPO)/vsim/generated-src
 
 #--------------------------------------------------------------------
