update Makefile(s) etc. to allow ifdef (based on LWISE symbol) in NIST implementation to swap out content for "external" implementation

--- a/src/sw/Makefile
+++ b/src/sw/Makefile
@@ -20,7 +20,11 @@ include ./share/arch/${ARCH}/Makefile.in
 include ./${ALG}/Makefile.in
 
 # pass-through environment variable as macros for use in source code
+ifeq "${IMP}" "nist"
 GCC_FLAGS += -DALG="\"${ALG}\"" -DARCH="\"${ARCH}\"" -DIMP="\"${IMP}\""
+else
+GCC_FLAGS += -DALG="\"${ALG}\"" -DARCH="\"${ARCH}\"" -DIMP="\"${IMP}\"" -DLWISE
+endif
 
 # -----------------------------------------------------------------------------
 
