--- a/src/sw/grain/Makefile.in
+++ b/src/sw/grain/Makefile.in
@@ -6,13 +6,13 @@
 
 # =============================================================================
 
-NIST_HOME     ?= ${REPO_HOME}/src/sw/grain/nist/Implementations/crypto_aead/grain128aeadv2
-NIST_IMP      ?= ref
-NIST_KAT      ?= ${NIST_HOME}/LWC_AEAD_KAT_128_96.txt
+export NIST_HOME     ?= ${REPO_HOME}/src/sw/grain/nist/Implementations/crypto_aead/grain128aeadv2
+export NIST_IMP      ?= ref
+export NIST_KAT      ?= ${NIST_HOME}/LWC_AEAD_KAT_128_96.txt
 
-NIST_INCLUDES  = ${NIST_HOME}/${NIST_IMP}
+export NIST_INCLUDES  = ${NIST_HOME}/${NIST_IMP}
 
-NIST_SOURCES   = $(wildcard ${NIST_HOME}/${NIST_IMP}/*.c)
-NIST_HEADERS   = $(wildcard ${NIST_HOME}/${NIST_IMP}/*.h)
+export NIST_SOURCES   = $(wildcard ${NIST_HOME}/${NIST_IMP}/*.c)
+export NIST_HEADERS   = $(wildcard ${NIST_HOME}/${NIST_IMP}/*.h)
 
 # =============================================================================
