--- a/src/sw/share/arch/rv32/Makefile.in
+++ b/src/sw/share/arch/rv32/Makefile.in
@@ -25,13 +25,13 @@ export GCC_LIBS   =
 
 # -----------------------------------------------------------------------------
 
-run   : ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
-	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike    --isa='rv32gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv32-unknown-elf/bin/pk ${<}
+run   : build
+	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike    --isa='rv32gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv32-unknown-elf/bin/pk ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
 
-debug : ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
-	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike -d --isa='rv32gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv32-unknown-elf/bin/pk ${<}
+debug : build
+	@${REPO_HOME}/build/sw-toolchain/${ALG}/bin/spike -d --isa='rv32gc_zbb_zbkb_zbkx' ${REPO_HOME}/build/sw-toolchain/${ALG}/riscv32-unknown-elf/bin/pk ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
 
-scan  : ${REPO_HOME}/build/${ALG}/driver-${ARCH}_${IMP}.elf
-	@PYTHONPATH="./share" python3 ./${ALG}/scan.py --rv32
+scan  :
+	@PYTHONPATH="./share" python3 ./${ALG}/scan.py --nist --rv32
 
 # =============================================================================
